isismap-front/frontendisismap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendisismap-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
